# web-for-simple-enjoyment

./: README.md
wfse/: pyproject.toml
wfse/app/: main.py  models.py
wfse/app/common/: config.py  consts.py
wfse/app/database/: conn.py  schema.py
wfse/app/routes/: auth.py  fortune.py  index.py
wfse/tests/: conftest.py  test_fortune.py  test_index.py  test_oauth.py  test_temp.py
wfse/wfse/: main.py
